--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,21 +16,37 @@ services:
     # you add a video device
     environment:
       - ENABLE_MJPG_STREAMER=false
-    ####
-    # uncomment if you wish to edit the configuration files of octoprint
-    # refer to docs on configuration editing for more information
-    ####
 
-    #config-editor:
-    #  image: linuxserver/code-server
-    #  ports:
-    #    - 8443:8443
-    #  depends_on:
-    #    - octoprint
-    #  restart: unless-stopped
-    #  environment:
-    #    - PUID=0
-    #    - GUID=0
-    #    - TZ=America/Chicago
-    #  volumes:
-    #    - octoprint:/octoprint
+  Mega_S:
+    image: octoprint/octoprint
+    restart: unless-stopped
+    ports:
+      - 5001:80
+    devices:
+      # Use ls /dev | grep 'ttyUSB\|ttyACM' to find printers
+      - /dev/ttyUSB1:/dev/ttyUSB0
+    #  - /dev/video0:/dev/video0
+    volumes:
+      - /home/essential-accident/octoprint/mega_s:/octoprint
+    # uncomment the lines below to ensure camera streaming is enabled when
+    # you add a video device
+    environment:
+      - ENABLE_MJPG_STREAMER=false
+  ####
+  # uncomment if you wish to edit the configuration files of octoprint
+  # refer to docs on configuration editing for more information
+  ####
+
+  #config-editor:
+  #  image: linuxserver/code-server
+  #  ports:
+  #    - 8443:8443
+  #  depends_on:
+  #    - octoprint
+  #  restart: unless-stopped
+  #  environment:
+  #    - PUID=0
+  #    - GUID=0
+  #    - TZ=America/Chicago
+  #  volumes:
+  #    - octoprint:/octoprint
